--- a/style.css
+++ b/style.css
@@ -22,36 +22,95 @@ body {
     width: 50px;
     height: 50px;
     cursor: pointer;
+    position: relative;
 }
-.color-panel-item[data-color="white"] {
+.color-panel-item[data-color="white"]::before {
+    content: '';
+    position: absolute;
     background: white;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 1s cubic-bezier(.2,.6,.8,.4) forwards;
 }
-.color-panel-item[data-color="black"] {
-    background: black
+.color-panel-item[data-color="black"]::before {
+    content: '';
+    position: absolute;
+    background: black;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 1s ease-out forwards;
 }
-.color-panel-item[data-color="green"] {
+.color-panel-item[data-color="green"]::before {
+    content: '';
+    position: absolute;
     background: green;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 1s ease-in-out forwards;
 }
-.color-panel-item[data-color="orange"] {
+.color-panel-item[data-color="orange"]::before {
+    content: '';
+    position: absolute;
     background: orange;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 2s ease-in forwards;
 }
-.color-panel-item[data-color="red"] {
+.color-panel-item[data-color="red"]::before {
+    content: '';
+    position: absolute;
     background: red;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 2s ease forwards;
 }
-.color-panel-item[data-color="purple"] {
+.color-panel-item[data-color="purple"]::before {
+    content: '';
+    position: absolute;
     background: purple;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 2.4s ease-in forwards;
 }
-.color-panel-item[data-color="pink"] {
+.color-panel-item[data-color="pink"]::before {
+    content: '';
+    position: absolute;
     background: pink;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 2s ease-in-out forwards;
 }
-.color-panel-item[data-color="cyan"] {
+.color-panel-item[data-color="cyan"]::before {
+    content: '';
+    position: absolute;
     background: cyan;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 1s ease forwards;
 }
-.color-panel-item[data-color="royalblue"] {
+.color-panel-item[data-color="cyan"]::before {
+    content: '';
+    position: absolute;
+    background: cyan;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 1.5s ease-in-out forwards;
+}
+.color-panel-item[data-color="royalblue"]::before {
+    content: '';
+    position: absolute;
     background: royalblue;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 2s ease-in forwards;
 }
-.color-panel-item[data-color="magenta"] {
+.color-panel-item[data-color="magenta"]::before {
+    content: '';
+    position: absolute;
     background: magenta;
+    width: 100%;
+    bottom: 0;
+    animation: wipe 1s ease-in forwards;
 }
 #tool-panel {
     display: flex;
@@ -94,3 +153,27 @@ body {
 }
 
 .active {display: block !important}
+
+
+@keyframes wipe {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 100%;
+    }
+}
+
+
+
+.tool-panel-item > i[data-tool="line"] {
+    transform: translate(6px, -5px) rotate(45deg)
+}
+
+.tool-panel-item > svg[data-tool="triangle"] {
+    transform: rotate(180deg);
+}
+
+.tool-panel-item > i[data-tool="fill"] {
+    font-size: 23px;
+}
