--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ body {
     cursor: pointer;
     position: relative;
 }
+
+.color-panel-item.active {
+    box-shadow: 0px 0px 12px 3px rgb(0, 0, 92, .2);
+    border: 1px solid #eee;
+    z-index: 1;
+}
+
 .color-panel-item[data-color="white"]::before {
     content: '';
     position: absolute;
@@ -119,7 +126,7 @@ body {
 .tool-panel-item {
     width:50px;
     height: 50px;
-    border: 1px solid #eee;
+    border-bottom: 1px solid #eee;
     cursor: pointer;
     display: flex;
     color: #fff;
@@ -152,19 +159,17 @@ body {
     width: 83px
 }
 
-.active {display: block !important}
-
-
-@keyframes wipe {
-    0% {
-        height: 0;
-    }
-    100% {
-        height: 100%;
-    }
+.activeSize {
+    display: block !important;
 }
 
-
+.tool-panel-item.active::after {
+    content: '';
+    background: rgb(123 164 255 / 30%);
+    width: 50px;
+    height: 50px;
+    position: absolute;
+}
 
 .tool-panel-item > i[data-tool="line"] {
     transform: translate(6px, -5px) rotate(45deg)
@@ -176,4 +181,15 @@ body {
 
 .tool-panel-item > i[data-tool="fill"] {
     font-size: 23px;
+}
+
+
+
+@keyframes wipe {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 100%;
+    }
 }
